still working on layout issues, 50% completed... side note, Bootstrap Sass Port sucks for now

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -16,7 +16,7 @@ html,body {
     box-sizing:border-box;
     font-size: $base-font-size;
     line-height: $base-line-height;
-    //background: yellow;
+    background: $pg-background;
 }
 
 *, *:before, *:after{
