--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -7,7 +7,8 @@
 $base-font-size: 16px;				// page base font size
 $base-line-height:1.5;				// page base line height
 
-
+// colors
+$pg-background: #4C4B46;
 
 
 
