--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -7,7 +7,7 @@
 	padding:0;
 	width: 100%;
 	height:280px;
-	background:// linear-gradient(#000, transparent 90%),
+	background:   linear-gradient(#000, transparent 95%),
 				  url("/images/me.png");
 	background-repeat: no-repeat;
 	background-position: 100% 100%;
